syntax = "proto3";

package com.project.uit.trendify.grpc;

option java_multiple_files = true;
option java_package = "com.project.uit.trendify.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse);
}

message UpdateStockRequest {
  repeated UpdateStockRequestItem items = 1;
}

message UpdateStockRequestItem {
  int64 product_id = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  bool success = 1;
  string message = 2;
}
